--- a/verb.css
+++ b/verb.css
@@ -170,8 +170,20 @@
     margin-top: 5px;
 }
 
-
-
+#rankedSoonTm {
+    position: absolute;
+    top: -67px;
+    left: 10px;
+    border: 2px solid #000;
+    border-radius: 4px;
+    width: auto;
+    background-color: rgba(0,0,0,.5);
+    color: #fff;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 16px;
+    display: none;
+}
 
 #leaderDisplay {
     background-color: rgba(0,0,0,0.2) !important;
