--- a/verb.css
+++ b/verb.css
@@ -182,7 +182,7 @@
     padding-left: 10px;
     padding-right: 10px;
     font-size: 16px;
-    display: none;
+    display: none !important;
 }
 
 #leaderDisplay {
